_generated-doc/3.2/config/quarkus-opentelemetry.adoc

:summaryTableId: quarkus-opentelemetry
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry_configuration]]link:#quarkus-opentelemetry_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.otel.traces.exporter]]`link:#quarkus-opentelemetry_quarkus.otel.traces.exporter[quarkus.otel.traces.exporter]`


[.description]
--
List of exporters supported by Quarkus.

List of exporters to be used for tracing, separated by commas. Has one of the values on `ExporterType` `otlp`, `cdi`, `none` or the full qualified name of a class implementing `io.opentelemetry.sdk.trace.export.SpanExporter`

Default on Quarkus is `ExporterType.Constants++#++CDI_VALUE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`cdi`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.otel.traces.sampler]]`link:#quarkus-opentelemetry_quarkus.otel.traces.sampler[quarkus.otel.traces.sampler]`


[.description]
--
The sampler to use for tracing.

Has one of the values on `SamplerType` `always_on`, `always_off`, `traceidratio`, `parentbased_always_on`, `parentbased_always_off`, `parentbased_traceidratio` or the Sampler SPI name. This will use the OTel SPI hooks for the `io.opentelemetry.sdk.trace.samplers.Sampler` implementation set in the provider: `io.opentelemetry.sdk.autoconfigure.spi.traces.ConfigurableSamplerProvider`.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.sampler.name` or defaults to `SamplerType.Constants++#++PARENT_BASED_ALWAYS_ON`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`parentbased_always_on`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.otel.metrics.exporter]]`link:#quarkus-opentelemetry_quarkus.otel.metrics.exporter[quarkus.otel.metrics.exporter]`


[.description]
--
No Metrics exporter for now

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_METRICS_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_METRICS_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.otel.logs.exporter]]`link:#quarkus-opentelemetry_quarkus.otel.logs.exporter[quarkus.otel.logs.exporter]`


[.description]
--
No Log exporter for now.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_LOGS_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_LOGS_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.otel.propagators]]`link:#quarkus-opentelemetry_quarkus.otel.propagators[quarkus.otel.propagators]`


[.description]
--
The propagators to be used. Use a comma-separated list for multiple propagators.

Has values from `PropagatorType` or the full qualified name of a class implementing `io.opentelemetry.context.propagation.TextMapPropagator`.

Default is `PropagatorType.Constants++#++TRACE_CONTEXT`,`PropagatorType.Constants++#++BAGGAGE` (W3C).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_PROPAGATORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_PROPAGATORS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`tracecontext,baggage`


a| [[quarkus-opentelemetry_quarkus.otel.sdk.disabled]]`link:#quarkus-opentelemetry_quarkus.otel.sdk.disabled[quarkus.otel.sdk.disabled]`


[.description]
--
If true, disable the OpenTelemetry SDK. Runtime configuration.

Defaults to `false`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SDK_DISABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SDK_DISABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-opentelemetry_quarkus.otel.traces.suppress-non-application-uris]]`link:#quarkus-opentelemetry_quarkus.otel.traces.suppress-non-application-uris[quarkus.otel.traces.suppress-non-application-uris]`


[.description]
--
Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints.

Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

This is a Quarkus specific property. Suppressing non-application uris is enabled by default.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.suppress-non-application-uris` or defaults to `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry_quarkus.otel.traces.include-static-resources]]`link:#quarkus-opentelemetry_quarkus.otel.traces.include-static-resources[quarkus.otel.traces.include-static-resources]`


[.description]
--
Include static resources from trace collection.

This is a Quarkus specific property. Include static resources is disabled by default. Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.include-static-resources` or defaults to `false`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-opentelemetry_quarkus.otel.traces.sampler.arg]]`link:#quarkus-opentelemetry_quarkus.otel.traces.sampler.arg[quarkus.otel.traces.sampler.arg]`


[.description]
--
An argument to the configured tracer if supported, for example a ratio.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.ratio` or defaults to `1.0`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++`
endif::add-copy-button-to-env-var[]
--|double 
|`1.0d`


a| [[quarkus-opentelemetry_quarkus.otel.attribute.value.length.limit]]`link:#quarkus-opentelemetry_quarkus.otel.attribute.value.length.limit[quarkus.otel.attribute.value.length.limit]`


[.description]
--
The maximum length of attribute values. Applies to spans and logs.

By default, there is no limit.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_ATTRIBUTE_VALUE_LENGTH_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_ATTRIBUTE_VALUE_LENGTH_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-opentelemetry_quarkus.otel.attribute.count.limit]]`link:#quarkus-opentelemetry_quarkus.otel.attribute.count.limit[quarkus.otel.attribute.count.limit]`


[.description]
--
The maximum number of attributes. Applies to spans, span events, span links, and logs.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_ATTRIBUTE_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_ATTRIBUTE_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry_quarkus.otel.span.attribute.value.length.limit]]`link:#quarkus-opentelemetry_quarkus.otel.span.attribute.value.length.limit[quarkus.otel.span.attribute.value.length.limit]`


[.description]
--
The maximum length of span attribute values. Takes precedence over `otel.attribute.value.length.limit`.

By default, there is no limit.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-opentelemetry_quarkus.otel.span.attribute.count.limit]]`link:#quarkus-opentelemetry_quarkus.otel.span.attribute.count.limit[quarkus.otel.span.attribute.count.limit]`


[.description]
--
The maximum number of attributes per span. Takes precedence over `otel.attribute.count.limit`.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_ATTRIBUTE_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_ATTRIBUTE_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry_quarkus.otel.span.event.count.limit]]`link:#quarkus-opentelemetry_quarkus.otel.span.event.count.limit[quarkus.otel.span.event.count.limit]`


[.description]
--
The maximum number of events per span.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_EVENT_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_EVENT_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry_quarkus.otel.span.link.count.limit]]`link:#quarkus-opentelemetry_quarkus.otel.span.link.count.limit[quarkus.otel.span.link.count.limit]`


[.description]
--
The maximum number of links per span.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_LINK_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_LINK_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry_quarkus.otel.bsp.schedule.delay]]`link:#quarkus-opentelemetry_quarkus.otel.bsp.schedule.delay[quarkus.otel.bsp.schedule.delay]`


[.description]
--
The interval, in milliseconds, between two consecutive exports.

Default is `5000`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_SCHEDULE_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_SCHEDULE_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5S`


a| [[quarkus-opentelemetry_quarkus.otel.bsp.max.queue.size]]`link:#quarkus-opentelemetry_quarkus.otel.bsp.max.queue.size[quarkus.otel.bsp.max.queue.size]`


[.description]
--
The maximum queue size.

Default is `2048`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_MAX_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_MAX_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a| [[quarkus-opentelemetry_quarkus.otel.bsp.max.export.batch.size]]`link:#quarkus-opentelemetry_quarkus.otel.bsp.max.export.batch.size[quarkus.otel.bsp.max.export.batch.size]`


[.description]
--
The maximum batch size.

Default is `512`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_MAX_EXPORT_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_MAX_EXPORT_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-opentelemetry_quarkus.otel.bsp.export.timeout]]`link:#quarkus-opentelemetry_quarkus.otel.bsp.export.timeout[quarkus.otel.bsp.export.timeout]`


[.description]
--
The maximum allowed time, in milliseconds, to export data.

Default is `30s`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_EXPORT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_EXPORT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-opentelemetry_quarkus.otel.resource.attributes]]`link:#quarkus-opentelemetry_quarkus.otel.resource.attributes[quarkus.otel.resource.attributes]`


[.description]
--
Specify resource attributes in the following format: `key1=val1,key2=val2,key3=val3`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_RESOURCE_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_RESOURCE_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry_quarkus.otel.service.name]]`link:#quarkus-opentelemetry_quarkus.otel.service.name[quarkus.otel.service.name]`


[.description]
--
Specify logical service name. Takes precedence over service.name defined with otel.resource.attributes and from quarkus.application.name.

Defaults to `quarkus.application.name`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${quarkus.application.name:unset}`


a| [[quarkus-opentelemetry_quarkus.otel.experimental.resource.disabled-keys]]`link:#quarkus-opentelemetry_quarkus.otel.experimental.resource.disabled-keys[quarkus.otel.experimental.resource.disabled-keys]`


[.description]
--
Specify resource attribute keys that are filtered.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPERIMENTAL_RESOURCE_DISABLED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPERIMENTAL_RESOURCE_DISABLED_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.endpoint]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.endpoint[quarkus.otel.exporter.otlp.endpoint]`


[.description]
--
Sets the OTLP endpoint to connect to. If unset, defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_GRPC_BASE_URI`. We are currently using just the traces, therefore `quarkus.otel.exporter.otlp.traces.endpoint` is recommended.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317/`


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.endpoint]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.endpoint[quarkus.otel.exporter.otlp.traces.endpoint]`


[.description]
--
OTLP Exporter specific. Will override `otel.exporter.otlp.endpoint`, if set.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.exporter.otlp.endpoint<` or defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_GRPC_BASE_URI`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317/`


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.headers]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.headers[quarkus.otel.exporter.otlp.traces.headers]`


[.description]
--
Key-value pairs to be used as headers associated with gRPC requests. The format is similar to the `OTEL_EXPORTER_OTLP_HEADERS` environment variable, a list of key-value pairs separated by the "=" character. i.e.: key1=value1,key2=value2

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.compression]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.compression[quarkus.otel.exporter.otlp.traces.compression]`


[.description]
--
Sets the method used to compress payloads. If unset, compression is disabled. Currently supported compression methods include `gzip` and `none`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
-- a|
`gzip`, `none` 
|


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.timeout]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.timeout[quarkus.otel.exporter.otlp.traces.timeout]`


[.description]
--
Sets the maximum time to wait for the collector to process an exported batch of spans. If unset, defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_TIMEOUT_SECS`s.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.protocol]]`link:#quarkus-opentelemetry_quarkus.otel.exporter.otlp.traces.protocol[quarkus.otel.exporter.otlp.traces.protocol]`


[.description]
--
OTLP defines the encoding of telemetry data and the protocol used to exchange data between the client and the server. Depending on the exporter, the available protocols will be different.

Currently, only `grpc` is allowed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`grpc`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
